--- a/app/mdx.css
+++ b/app/mdx.css
@@ -14,6 +14,14 @@
   display: block;
 }
 
+code {
+  @apply bg-zinc-200 rounded-md px-1;
+}
+
+.dark code {
+  @apply bg-zinc-800 rounded-md px-1;
+}
+
 [data-rehype-pretty-code-figure] {
   @apply relative text-white;
 }
